codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__standalone_windows_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! <V> -> 9.9.9                                                                          │
│ Run powershell -ExecutionPolicy Bypass -c '$env:CORBANU_NON_INTERACTIVE=1; irm                             │
│ https://github.com/CorbanuCore/CorbanuTerminal/releases/latest/download/install.ps1 | iex' to update.      │
│                                                                                                            │
│ See full release notes:                                                                                    │
│ https://github.com/CorbanuCore/CorbanuTerminal/releases/latest                                             │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
